<resources>
    <string name="app_name">NYCAID</string>
    <string name="menu_title_home">Home</string>
    <string name="grab_n_go_cardView_description">Free "Grab and Go" meals are available for all
        New Yorkers. Find a location near you. No registration, ID, or documentation required.</string>
    <string name="foodStamps_cardView_description">Apply and learn about Supplemental Nutrition
        Assistance Program (SNAP), also known as Food Stamps.</string>
    <string name="foodDelivery_cardView_description">Get food delivery if you can\'t go outside,
        have no one who can help you get food, and can\'t afford delivery as a result of COVID-19.</string>
    <string name="foodPantry_cardView_description">You can pick up food packages at a food pantry or
        get a meal at a soup kitchen. Find locations near you. No registration, ID, or documentation required</string>
    <string name="unemployment_cardView_description">New Yorkers can apply for Unemployment Insurance
        or Pandemic Unemployment Assistance. Apply today and see if you qualify.</string>
    <string name="housing_cardView_description">Rental assistance for low-income families and individual adults.</string>
    <string name="publicAssistance_cardView_description">See if you qualify for  public assistance,
        welfare, and emergency cash assistance.</string>
    <string name="funeralExpenses_cardView_description">Request financial assistance for funeral expenses.</string>
    <string name="unemployment_title_textView">Unemployment</string>
    <string name="home_food_title_text">Food</string>
    <string name="home_finance_title_text">Finance</string>
    <string name="home_health_title_text">Health</string>
    <string name="housing_title_textView">Housing</string>
    <string name="public_assistance_title_textView">Public Assistance</string>
    <string name="funeral_expenses_title_textView">Funeral Expenses</string>
    <string name="grab_n_go_title_textView">Grab N Go</string>
    <string name="food_stamps_title_textView">Food Stamps</string>
    <string name="food_pantry_title_textView">Food Pantry</string>
    <string name="food_delivery_assistance_title_textView">Food Delivery Assistance</string>
    <string name="search_by_zip_code_or_borough_text">SEARCH BY ZIP CODE OR BOROUGH</string>
    <string name="search_view_hint_text">ZIP CODE</string>
    <string name="testing_sites_title_textView">Testing Sites</string>
    <string name="medicaid_title_textView">Medicaid</string>
    <string name="testing_sites_cardView_description">Get tested for COVID-19. Find a testing location near you.</string>
    <string name="safety_tips_cardView_description">Follow these safety tips to help stop the spread of COVID-19. </string>
    <string name="medicaid_cardView_description">Apply for medicaid and health insurance.</string>
</resources>