<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Presenter.Finance.FinanceHomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/financeHeaderTop_imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:background="@drawable/asset_1xhdpi"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/unemployment_cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200dp"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius_50dp"
            app:cardElevation="@dimen/card_elevation_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/financeHeaderTop_imageView"
            android:foreground="?selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/unemployment_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/unemployment_title_textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/unemployment_description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/unemployment_cardView_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/housing_cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200dp"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius_50dp"
            app:cardElevation="@dimen/card_elevation_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unemployment_cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/housing_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/housing_title_textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/housing_description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/housing_cardView_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/publicAssistance_cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200dp"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius_50dp"
            app:cardElevation="@dimen/card_elevation_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/housing_cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/publicAssistance_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/public_assistance_title_textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/publicAssistance_description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/publicAssistance_cardView_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/funeralExpenses_cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200dp"
            android:layout_margin="@dimen/margin_28dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius_50dp"
            app:cardElevation="@dimen/card_elevation_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/publicAssistance_cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/funeralExpenses_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/funeral_expenses_title_textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/funeralExpenses_description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/funeralExpenses_cardView_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>