<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Presenter.Health.HealthHomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/healthHeaderTop_imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:background="@drawable/asset_3xhdpi"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/testing_cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200dp"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius_50dp"
            app:cardElevation="@dimen/card_elevation_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/healthHeaderTop_imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/testing_sites_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/testing_sites_title_textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/testing_sites_description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/testing_sites_cardView_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/safety_tips_cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200dp"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius_50dp"
            app:cardElevation="@dimen/card_elevation_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testing_cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/safety_tips_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="Safety Tips"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/safety_tips_description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/safety_tips_cardView_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/medicaid_cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200dp"
            android:layout_margin="@dimen/margin_28dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius_50dp"
            app:cardElevation="@dimen/card_elevation_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/safety_tips_cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/medicaid_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/medicaid_title_textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/medicaid_description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/medicaid_cardView_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>